# OSCR-UI

./: .OSCR_settings.ini  .dockerignore  .gitignore  CMakeLists.txt  OSCR-UI.iss  PKGBUILD  README.md  com.stobuilds.oscr.yaml  default.nix  main.py  pyproject.toml  requirements.txt  shell.nix
.github/disabled-workflows/: build.yml.dis  build_bin_linux.yml.dis  build_bin_linux.yml.disabled  build_bin_windows.yml.dis  build_pyinst_inno_installer.yml.dis  installer_windows.yml.dis  manual_build.yml.dis
.github/workflows/: binary_linux.yml  binary_windows.yml  build.yml  build_and_publish_pypi.yml  build_bin_all.yml  build_bin_windows.yml  build_pyinst_bin_linux.yml  build_pyinst_exe_windows.yml  build_pyinst_inno_installer.yml  manual_build.yml  release.yml
AppImage/: OSCR.appdata.xml  OSCR.desktop  entrypoint.sh  requirements.txt
OSCRUI/: __init__.py  analysisgraphs.py  analysistables.py  app.py  backend.py  callbacks.py  config.py  config3.py  datafunctions.py  datamodels.py  dialogs.py  displayer.py  headers.py  iofunctions.py  leagueconnector.py  liveparser.py  parserbridge.py  sidebar.py  splitdialog.py  statusbar.py  style.py  subwindows.py  textedit.py  theme.py  translation.py  widgetbuilder.py  widgetmanager.py  widgets.py
assets/: oscr.desktop
distribution/: .gitignore  OSCR-UI.iss  OSCR-UI.spec  PKGBUILD  README.md  build_deb.Dockerfile  build_deb.compose.yaml  build_pyinstaller.sh  oscr-ui.desktop  package_deb.sh
distribution/DEBIAN/: control
distribution/arch/: PKGBUILD  README.md
distribution/debian/: README.md  build_deb.Dockerfile  build_deb.compose.yaml  changelog  package_deb.sh
distribution/debian/DEBIAN/: control
distribution/windows/: README.md
locales/de/LC_MESSAGES/: messages.mo  messages.po
locales/en/LC_MESSAGES/: messages.mo  messages.po
locales/fr/LC_MESSAGES/: messages.mo  messages.po
locales/zh/LC_MESSAGES/: messages.mo  messages.po
shim/: CMakeLists.txt  main.cpp
