[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "OSCR-UI"
dependencies = [
  "cx_Freeze==7.1.0.post0",
  "PySide6==6.8.0.2",
  "pyqtgraph==0.13.7",
  "numpy==1.26.4",
  "STO-OSCR>=2025.7.10.0",
  "OSCR-django-client>=2024.9.2.1",
  "pydantic>=2.7.3",
]
requires-python = ">=3.10"
authors = []
maintainers = []
description = "Open Source Combatlog Reader"
readme = "README.md"
license = {file = "LICENSE"}
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dynamic = ["version"]

[project.optional-dependencies]
gui = []
cli = []

[project.urls]
Homepage = "https://github.com/STOCD/OSCR-UI"
Repository = "https://github.com/STOCD/OSCR-UI.git"
"Bug Tracker" = "https://github.com/STOCD/OSCR-UI/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
oscr = "main:Launcher.launch"

[tool.hatch.version]
path = "main.py"
pattern = "\\s*version = '(?P<version>.*)'"

[tool.black]
target-version = ['py38']
line-length = 110

[tool.cxfreeze]
executables = [
    { script = "main.py", base = "gui", target_name = "OSCR", icon = "assets/oscr_icon_small", shortcut_name = "Open Source Combatlog Reader", shortcut_dir = "DesktopFolder" },
    { script = "main.py", base = "gui", target_name = "OSCR", icon = "assets/oscr_icon_small", shortcut_name = "Open Source Combatlog Reader", shortcut_dir = "ProgramMenuFolder" },
]

[tool.cxfreeze.build_exe]
include_files = ["assets", "README.md", "LICENSE", "locales"]
zip_include_packages = ["*"]
zip_exclude_packages = []

[tool.cxfreeze.bdist_msi]
initial_target_dir = "[ProgramFilesFolder]OSCR"
install_icon = "assets/oscr_icon_small.ico"
upgrade_code = "{4780dfdf-6dc6-4d06-93ad-f0297d4f5bf2}"

[tool.setuptools.data-files]
"share/applications" = ["assets/oscr.desktop"]
"share/icons/hicolor/64x64/apps" = ["assets/oscr_icon_small.png"]
